fixed borderbox issue causing gap in gameboard

--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 *,
 *::after,
 *::before {
-  box-sizing: border-box;
   padding: 0;
   margin: 0;
 }
